[project]
name = "kacsheet"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "naraki", email = "naraki@gmail.com" }
]
dependencies = [
    "openpyxl>=3.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "kacsheet:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kacsheet"]
